simple viable site

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/index.js": {
-      "runtime": "nodejs14.x"
+      "memory": 1024
     }
-  }
+  },
+  "includeFiles": "api/*"
 }
