--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Serverless Vercel function to create a Lichess rating shield",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"No build step\""
   },
   "keywords": [],
   "author": "",
@@ -14,4 +15,3 @@
     "express": "^4.17.3"
   }
 }
-
